# SurakshaOS

./: .env.example  .htaccess  BACKEND_API_DOCUMENTATION.md  BACKEND_COMPARISON.md  BACKEND_DEPLOYMENT_STEPS.md  BACKEND_IMPLEMENTATION.md  BUILD_AND_DEPLOY.md  BUILD_AND_RUN.md  BUILD_ERROR_FIX.md  BUILD_PLAN.md  BUILD_PROGRESS_REPORT.md  CLEANUP_INSTRUCTIONS.md  CLEANUP_OLD_BACKEND.md  CLEANUP_OLD_BACKEND_NOW.md  COMPLETE_DEPLOYMENT_GUIDE.md  COMPLETE_DEPLOYMENT_PLAN.md  COMPLETE_FEATURE_SET.md  COMPLETE_FIXES_APPLIED.md  COMPLETE_OS_STATUS.md  COMPLETE_PLATFORM_AUDIT.md  COMPLETE_PROJECT_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  CONTRIBUTING.md  CPANEL_DEPLOYMENT_GUIDE.md  CPANEL_HOSTING_GUIDE.md  CPANEL_SHARED_HOSTING_SOLUTION.md  CPANEL_TERMINAL_GUIDE.md  CRITICAL_FIX_PATHS.md  DATABASE_SCHEMA.md  DATABASE_STORAGE_VERIFICATION.md  DEEP_AUDIT_REPORT.md  DELETE_OLD_BACKEND_QUICK.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOY_BACKEND_NOW.md  DEPLOY_NOW.md  DEPLOY_TO_UMRAHCONNECT_IN.md  DEVELOPMENT_STATUS.md  DIRECT_UPLOAD_GUIDE.md  (+70 more)
.github/workflows/: ci.yml  cleanup-old-backend.yml
backend/: .env.example  .gitignore  DEPLOYMENT.md  README.md  jest.config.js  package.json  server.js  setup.sh
backend-laravel/: .env.example  .gitkeep  API_TESTING.md  INSTALLATION.md  PNR_INVENTORY_SYSTEM.md  README.md  composer.json  install.sh
backend-laravel/config/: app.php  auth.php  cors.php  jwt.php
backend-laravel/public/: .htaccess
backend-laravel/routes/: api.php  pnr-routes.php  web.php
backend/config/: db.js  (+3 more)
database/: schema-shared-hosting.sql  schema.sql
frontend/: .env.example  .env.production  .gitignore  .htaccess.example  CPANEL_DEPLOYMENT.md  FILE_CHECKLIST.md  QUICK_START.md  README.md  deploy-cpanel.bat  deploy-cpanel.sh  index.html  package.json  vite.config.js
install/: api.php  api_new.php  complete_schema.sql  database_schema.sql  dynamic_registration.sql  index.html  index.php  index_new.php  install.php  wizard.html
installer/: .htaccess  README.md  check.php  fix-permissions.php  index.php  install-api.php
kernel/: Cargo.toml  build.rs  linker.ld
kernel/.cargo/: config.toml
kernel/benches/: performance.rs
kernel/src/: arch.rs  boot.S  boot.rs  fs.rs  init.rs  ipc.rs  main.rs  memory.rs  power.rs  process.rs  scheduler.rs  shell.rs  syscall.rs
kernel/src/ai/: mod.rs
kernel/src/arch/riscv64/: boot.S  mod.rs  uart.rs
kernel/src/crypto/: hash.rs  pqc.rs
kernel/src/drivers/: display.rs  input.rs  storage.rs
kernel/src/drivers/display/: mod.rs
kernel/src/drivers/input/: keyboard.rs  mod.rs
kernel/src/fs/: encrypted.rs
kernel/src/mm/: mod.rs  page_table.rs
kernel/src/net/: mod.rs
kernel/src/process/: context.rs  mod.rs  scheduler.rs
kernel/src/security/: mod.rs
kernel/tests/: integration_test.rs  verify.rs
scripts/: deploy.sh  test.sh
sdk/: README.md
(+299 files in other folders)
