[package]
name = "suraksha-kernel"
version = "0.1.0"
authors = ["SurakshaOS Team <dev@suraksha-os.in>"]
edition = "2021"
license = "GPL-3.0"
description = "SurakshaOS Microkernel - Formally verified, capability-based mobile OS kernel"
repository = "https://github.com/IamTamheedNazir/SurakshaOS"

[dependencies]
# Core dependencies
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "2.4"

# Allocator
linked_list_allocator = "0.10"

# Atomic operations
atomic = "0.5"

# Optional: Post-quantum crypto (when available)
# pqcrypto-ml-kem = { version = "0.1", optional = true }
# pqcrypto-ml-dsa = { version = "0.1", optional = true }

[dev-dependencies]
# Testing
kani-verifier = { version = "0.40", optional = true }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"  # Optimize for size
codegen-units = 1

[features]
default = []
formal-verify = ["kani-verifier"]
shakti = []
arm-rme = []

[[bin]]
name = "suraksha-kernel"
path = "src/main.rs"

[lib]
name = "suraksha_kernel"
path = "src/lib.rs"
