[package]
name = "suraksha-kernel"
version = "0.2.0"
edition = "2021"
authors = ["Tamheed Nazir"]
description = "SurakshaOS - India's Sovereign Mobile Operating System Kernel"

[dependencies]
spin = "0.9"
linked_list_allocator = "0.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
